bin/testsuite/tests/compiler/src/errors/compiler1280.swg
//#global testerror

//#[Swag.PrintBc]
#test
{
    for 10 do
        #assert(true)
}
